--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>i love webpack</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
   <h3>i love webpack!</h3>
   <div id="cardHolder"></div>
   
   <script src="unmini.js"></script>
-<script defer src="unmini.js"></script></body>
+</body>
 </html>
