did some playing

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 <body>
   <h3>i love webpack!</h3>
   <div id="cardHolder"></div>
-  
-  <script src="unmini.js"></script>
+  <h3>i dislike text</h3>
 </body>
-</html>
+</html>git 
